; ModuleID = '/home/carl/AnghaBench/capstone/cstool/extr_cstool_x86.c_get_fpu_flag_name.c'
source_filename = "/home/carl/AnghaBench/capstone/cstool/extr_cstool_x86.c_get_fpu_flag_name.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [7 x i8] c"MOD_C0\00", align 1
@.str.1 = private unnamed_addr constant [7 x i8] c"MOD_C1\00", align 1
@.str.2 = private unnamed_addr constant [7 x i8] c"MOD_C2\00", align 1
@.str.3 = private unnamed_addr constant [7 x i8] c"MOD_C3\00", align 1
@.str.4 = private unnamed_addr constant [9 x i8] c"RESET_C0\00", align 1
@.str.5 = private unnamed_addr constant [9 x i8] c"RESET_C1\00", align 1
@.str.6 = private unnamed_addr constant [9 x i8] c"RESET_C2\00", align 1
@.str.7 = private unnamed_addr constant [9 x i8] c"RESET_C3\00", align 1
@.str.8 = private unnamed_addr constant [7 x i8] c"SET_C0\00", align 1
@.str.9 = private unnamed_addr constant [7 x i8] c"SET_C1\00", align 1
@.str.10 = private unnamed_addr constant [7 x i8] c"SET_C2\00", align 1
@.str.11 = private unnamed_addr constant [7 x i8] c"SET_C3\00", align 1
@.str.12 = private unnamed_addr constant [9 x i8] c"UNDEF_C0\00", align 1
@.str.13 = private unnamed_addr constant [9 x i8] c"UNDEF_C1\00", align 1
@.str.14 = private unnamed_addr constant [9 x i8] c"UNDEF_C2\00", align 1
@.str.15 = private unnamed_addr constant [9 x i8] c"UNDEF_C3\00", align 1
@.str.16 = private unnamed_addr constant [8 x i8] c"TEST_C0\00", align 1
@.str.17 = private unnamed_addr constant [8 x i8] c"TEST_C1\00", align 1
@.str.18 = private unnamed_addr constant [8 x i8] c"TEST_C2\00", align 1
@.str.19 = private unnamed_addr constant [8 x i8] c"TEST_C3\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i32)* @get_fpu_flag_name to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @get_fpu_flag_name(i32 %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  switch i32 %4, label %5 [
    i32 147, label %6
    i32 146, label %7
    i32 145, label %8
    i32 144, label %9
    i32 143, label %10
    i32 142, label %11
    i32 141, label %12
    i32 140, label %13
    i32 139, label %14
    i32 138, label %15
    i32 137, label %16
    i32 136, label %17
    i32 131, label %18
    i32 130, label %19
    i32 129, label %20
    i32 128, label %21
    i32 135, label %22
    i32 134, label %23
    i32 133, label %24
    i32 132, label %25
  ]

5:                                                ; preds = %1
  store i8* null, i8** %2, align 8
  br label %26

6:                                                ; preds = %1
  store i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0), i8** %2, align 8
  br label %26

7:                                                ; preds = %1
  store i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.1, i64 0, i64 0), i8** %2, align 8
  br label %26

8:                                                ; preds = %1
  store i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.2, i64 0, i64 0), i8** %2, align 8
  br label %26

9:                                                ; preds = %1
  store i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.3, i64 0, i64 0), i8** %2, align 8
  br label %26

10:                                               ; preds = %1
  store i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.4, i64 0, i64 0), i8** %2, align 8
  br label %26

11:                                               ; preds = %1
  store i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.5, i64 0, i64 0), i8** %2, align 8
  br label %26

12:                                               ; preds = %1
  store i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.6, i64 0, i64 0), i8** %2, align 8
  br label %26

13:                                               ; preds = %1
  store i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.7, i64 0, i64 0), i8** %2, align 8
  br label %26

14:                                               ; preds = %1
  store i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.8, i64 0, i64 0), i8** %2, align 8
  br label %26

15:                                               ; preds = %1
  store i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.9, i64 0, i64 0), i8** %2, align 8
  br label %26

16:                                               ; preds = %1
  store i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.10, i64 0, i64 0), i8** %2, align 8
  br label %26

17:                                               ; preds = %1
  store i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.11, i64 0, i64 0), i8** %2, align 8
  br label %26

18:                                               ; preds = %1
  store i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.12, i64 0, i64 0), i8** %2, align 8
  br label %26

19:                                               ; preds = %1
  store i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.13, i64 0, i64 0), i8** %2, align 8
  br label %26

20:                                               ; preds = %1
  store i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.14, i64 0, i64 0), i8** %2, align 8
  br label %26

21:                                               ; preds = %1
  store i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.15, i64 0, i64 0), i8** %2, align 8
  br label %26

22:                                               ; preds = %1
  store i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.16, i64 0, i64 0), i8** %2, align 8
  br label %26

23:                                               ; preds = %1
  store i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.17, i64 0, i64 0), i8** %2, align 8
  br label %26

24:                                               ; preds = %1
  store i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.18, i64 0, i64 0), i8** %2, align 8
  br label %26

25:                                               ; preds = %1
  store i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.19, i64 0, i64 0), i8** %2, align 8
  br label %26

26:                                               ; preds = %25, %24, %23, %22, %21, %20, %19, %18, %17, %16, %15, %14, %13, %12, %11, %10, %9, %8, %7, %6, %5
  %27 = load i8*, i8** %2, align 8
  ret i8* %27
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
